# EduPulse

./: .env.example  .gitignore  README.md  docker-compose.yml  init-db.sh  init-keycloak.sh  init.sql  start-keycloak.sh  start.ps1  start.sh
backend/: Dockerfile  main.py  pyproject.toml
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: c8b24ea88135_add_survey_models.py  d4f1c2b3a4e5_add_option_id_to_survey_answers.py  e3b1c9f4a7b2_add_template_id_and_default_template.py
backend/app/api/: __init__.py  admin.py  auth.py  curator.py  reports.py  surveys.py
backend/app/models/: __init__.py  faculty.py  survey.py  user.py
backend/app/schemas/: __init__.py  faculty.py  statistics.py  survey.py
backend/core/: config.py  database.py
backend/services/: auth_service.py  faculty_service.py  link_service.py  report_service.py  survey_service.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AdminSurveyEditor.tsx  Layout.tsx  SurveyEditor.tsx
frontend/src/pages/: AdminDashboard.tsx  AuthCallback.tsx  CuratorDashboard.tsx  GroupSelection.tsx  Home.tsx  SurveyPage.tsx
frontend/src/services/: api.ts
keycloak/: Dockerfile  init-config.json  start-keycloak.sh
